feat: added cart button counter products

--- a/src/components/Header/Cart/Cart.scss
+++ b/src/components/Header/Cart/Cart.scss
@@ -136,7 +136,7 @@
 
       > button {
         padding: 14px;
-        background: #FAA500;
+        background: var(--primary);
         width: 100%;
         border-radius: 4px;
 
