--- a/src/components/Newsletter/Newsletter.scss
+++ b/src/components/Newsletter/Newsletter.scss
@@ -33,7 +33,7 @@
 
     button {
       min-width: 132px;
-      background-color: #FAA500;
+      background-color: var(--primary);
       color: var(--white);
       font-size: 16px;
       font-weight: 700;
