--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -129,12 +129,37 @@
       align-items: center;
       justify-content: center;
       position: relative;
-      gap: 10px;
+
+      &--amount {
+        
+        background-color: var(--primary);
+        color: var(--white);
+        font-weight: 600;
+
+        width: 20px;
+        height: 20px;
+        border-radius: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: 5px;
+
+        @media(max-width: 767px) {
+          position: absolute;
+          top: 0;
+          right: -15px;
+          margin-left: 0;
+
+
+        }
+      }
 
       &--text {
         color: var(--color-2-500);
         font-size: 14px;
         font-weight: 400;
+        display: flex;
+        margin-left: 10px;
 
         @media(max-width: 767px) {
           display: none;
