--- a/src/components/HeaderCarousel/HeaderCarousel.scss
+++ b/src/components/HeaderCarousel/HeaderCarousel.scss
@@ -49,11 +49,11 @@
       opacity: 1;
       width: 12px;
       height: 12px;
-      border: solid 1px #FAA500;
+      border: solid 1px var(--primary);
     }
 
     .swiper-pagination-bullet-active {
-      background-color: #FAA500;
+      background-color: var(--primary);
     }
   }
 
