--- a/src/components/ProductShelf/ProductShelf.scss
+++ b/src/components/ProductShelf/ProductShelf.scss
@@ -85,7 +85,7 @@
           justify-content: center;
           align-items: center;
           border-radius: 4px;
-          background: #FAA500;
+          background: var(--primary);
 
           color: #FFF;
           text-align: center;
