--- a/src/components/Header/Cart/Cart.scss
+++ b/src/components/Header/Cart/Cart.scss
@@ -7,7 +7,7 @@
   margin: 0 auto;
   height: 500px;
 
-  z-index: 100;
+  z-index: 1;
   background-color: var(--white);
   box-shadow: 3px 7px 14px 2px rgba(0, 0, 0, 0.1);
   display: flex;
@@ -136,7 +136,7 @@
 
       > button {
         padding: 14px;
-        background: var(--primary);
+        background: #FAA500;
         width: 100%;
         border-radius: 4px;
 
